--- a/templates/inline-tags.html
+++ b/templates/inline-tags.html
@@ -1,4 +1,4 @@
 <div class="tdb-tags">
-  <div ng-repeat="tag in task.tags" class="tdb-tag shadow-bottom-right">{{tag.content}}<div class="tdb-tag-remove" ng-click="task.removeTag(tag)"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></div></div>
+  <div ng-repeat="tag in task.tags" class="tdb-tag shadow-heavy">{{tag.content}}<div class="tdb-tag-remove" ng-click="task.removeTag(tag)"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></div></div>
   <input class="tdb-newtag" placeholder="Add new tag..." ng-model="taskCtrl.newTag" ng-keydown="taskCtrl.addTag($event, task)"/>
 </div>
