--- a/templates/controls.html
+++ b/templates/controls.html
@@ -1,16 +1,16 @@
 <div class="tdb-controls" ng-hide="task.editable">
-  <div class="tdb-control shadow-light {{task.getColor('bg')}}" ng-click="task.edit()">
-    <span class="glyphicon glyphicon-edit" aria-hidden="true"></span>
-  </div>
-  <div class="tdb-control shadow-light {{task.getColor('bg')}}" ng-click="taskCtrl.remove(task)">
-    <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
-  </div>
+    <div class="tdb-control shadow-light" ng-click="taskCtrl.edit(task)">
+        <span class="glyphicon glyphicon-edit" aria-hidden="true"></span>
+    </div>
+    <div class="tdb-control shadow-light" ng-click="taskCtrl.remove(task)">
+        <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+    </div>
 </div>
 <div class="tdb-controls sticky" ng-show="task.editable">
-  <div class="tdb-control shadow-light control-bg-ok" ng-click="taskCtrl.saveChanges(task)">
-    <span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
-  </div>
-  <div class="tdb-control shadow-light control-bg-cancel" ng-click="taskCtrl.discardChanges(task)">
-    <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
-  </div>
+    <div class="tdb-control shadow-light control-bg-ok" ng-click="taskCtrl.saveChanges(task)">
+        <span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
+    </div>
+    <div class="tdb-control shadow-light control-bg-cancel" ng-click="taskCtrl.discardChanges(task)">
+        <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+    </div>
 </div>
